--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,13 @@ jobs:
         with:
           fetch-depth: 0 # Fetch all history to properly check tags
 
+      # Debug step to see directory structure
+      - name: Debug - Show directory structure
+        run: |
+          pwd
+          ls -la
+          find . -type d -maxdepth 2
+
       #2 Setup Java
       - name: Set Up Java
         uses: actions/setup-java@v3.12.0
@@ -70,21 +77,39 @@ jobs:
             ~/.gradle/caches
             ~/.gradle/wrapper
             ~/.android/build-cache
-            frontend/android/.gradle
+            ${{ github.workspace }}/frontend/android/.gradle
           key: ${{ runner.os }}-gradle-${{ hashFiles('frontend/**/*.gradle*', 'frontend/**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      #6 Install Dependencies
-      - name: Install Dependencies
-        working-directory: frontend
-        run: flutter pub get
+      #6 Check if frontend directory exists and install dependencies
+      - name: Check paths and install dependencies
+        run: |
+          echo "Current directory: $(pwd)"
+          echo "GitHub workspace: ${{ github.workspace }}"
+          echo "List directories:"
+          ls -la
+          
+          if [ -d "frontend" ]; then
+            cd frontend
+            echo "Running flutter pub get in $(pwd)"
+            flutter pub get
+          else
+            echo "Error: frontend directory not found. Directory contents:"
+            ls -la
+            exit 1
+          fi
 
       #7 Create Local Properties
       - name: Create Local Properties
-        working-directory: frontend
         run: |
-          echo "flutter.sdk=/opt/hostedtoolcache/flutter/stable-3.13.9-x64" > android/local.properties
+          if [ -d "frontend" ]; then
+            cd frontend
+            echo "flutter.sdk=/opt/hostedtoolcache/flutter/stable-3.13.9-x64" > android/local.properties
+          else
+            echo "Error: frontend directory not found"
+            exit 1
+          fi
 
       #8 Check for keystore secret
       - name: Check for keystore secret
@@ -99,38 +124,60 @@ jobs:
       #9 Setup keystore from secrets
       - name: Setup keystore
         if: steps.check_keystore.outputs.has_keystore == 'true'
-        working-directory: frontend
         run: |
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/keystore.jks
-          echo "storeFile=../app/keystore.jks" > android/key.properties
-          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
-          echo "storePassword=${{ secrets.STORE_PASSWORD }}" >> android/key.properties
-          echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
+          if [ -d "frontend" ]; then
+            cd frontend
+            echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/keystore.jks
+            echo "storeFile=../app/keystore.jks" > android/key.properties
+            echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
+            echo "storePassword=${{ secrets.STORE_PASSWORD }}" >> android/key.properties
+            echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
 
-          # Display the SHA-1 fingerprint for verification
-          keytool -list -v -keystore android/app/keystore.jks -alias ${{ secrets.KEY_ALIAS }} -storepass ${{ secrets.STORE_PASSWORD }} -keypass ${{ secrets.KEY_PASSWORD }} | grep "SHA1:"
+            # Display the SHA-1 fingerprint for verification
+            keytool -list -v -keystore android/app/keystore.jks -alias ${{ secrets.KEY_ALIAS }} -storepass ${{ secrets.STORE_PASSWORD }} -keypass ${{ secrets.KEY_PASSWORD }} | grep "SHA1:"
+          else
+            echo "Error: frontend directory not found"
+            exit 1
+          fi
 
       #10 Use a Debug Key for PR Builds
       - name: Generate debug keystore for PR builds
         if: steps.check_keystore.outputs.has_keystore != 'true' || github.event_name == 'pull_request'
-        working-directory: frontend
         run: |
-          mkdir -p android/app
-          keytool -genkeypair -v -keystore android/app/debug.keystore -storepass android -alias androiddebugkey -keypass android -keyalg RSA -keysize 2048 -validity 10000 -dname "CN=Android Debug,O=Android,C=US"
-          echo "storeFile=../app/debug.keystore" > android/key.properties
-          echo "keyAlias=androiddebugkey" >> android/key.properties
-          echo "storePassword=android" >> android/key.properties
-          echo "keyPassword=android" >> android/key.properties
+          if [ -d "frontend" ]; then
+            cd frontend
+            mkdir -p android/app
+            keytool -genkeypair -v -keystore android/app/debug.keystore -storepass android -alias androiddebugkey -keypass android -keyalg RSA -keysize 2048 -validity 10000 -dname "CN=Android Debug,O=Android,C=US"
+            echo "storeFile=../app/debug.keystore" > android/key.properties
+            echo "keyAlias=androiddebugkey" >> android/key.properties
+            echo "storePassword=android" >> android/key.properties
+            echo "keyPassword=android" >> android/key.properties
+          else
+            echo "Error: frontend directory not found"
+            exit 1
+          fi
 
       #11 Build Release APK
       - name: Build Release APK
-        working-directory: frontend
-        run: flutter build apk --release
+        run: |
+          if [ -d "frontend" ]; then
+            cd frontend
+            flutter build apk --release
+          else
+            echo "Error: frontend directory not found"
+            exit 1
+          fi
 
       #12 Build App Bundle
       - name: Build App Bundle
-        working-directory: frontend
-        run: flutter build appbundle --release
+        run: |
+          if [ -d "frontend" ]; then
+            cd frontend
+            flutter build appbundle --release
+          else
+            echo "Error: frontend directory not found"
+            exit 1
+          fi
 
       #13 Upload Release Artifacts
       - name: Upload Release Artifacts
@@ -138,20 +185,25 @@ jobs:
         with:
           name: Release-APK
           path: |
-            frontend/build/app/outputs/flutter-apk/app-release.apk
-            frontend/build/app/outputs/bundle/release/app-release.aab
+            ${{ github.workspace }}/frontend/build/app/outputs/flutter-apk/app-release.apk
+            ${{ github.workspace }}/frontend/build/app/outputs/bundle/release/app-release.aab
 
       #14 Extract Version
       - name: Extract version from pubspec.yaml
         id: extract_version
-        working-directory: frontend
         run: |
-          version=$(grep '^version: ' pubspec.yaml | cut -d ' ' -f 2 | tr -d '\r')
-          # Strip build number part if present (after the +)
-          version_without_build=$(echo $version | cut -d '+' -f 1)
-          echo "VERSION=$version_without_build" >> $GITHUB_ENV
-          echo "FULL_VERSION=$version" >> $GITHUB_ENV
-          echo "Extracted version: $version_without_build (full: $version)"
+          if [ -d "frontend" ]; then
+            cd frontend
+            version=$(grep '^version: ' pubspec.yaml | cut -d ' ' -f 2 | tr -d '\r')
+            # Strip build number part if present (after the +)
+            version_without_build=$(echo $version | cut -d '+' -f 1)
+            echo "VERSION=$version_without_build" >> $GITHUB_ENV
+            echo "FULL_VERSION=$version" >> $GITHUB_ENV
+            echo "Extracted version: $version_without_build (full: $version)"
+          else
+            echo "Error: frontend directory not found"
+            exit 1
+          fi
 
       #15 Check if Tag Exists
       - name: Check if Tag Exists
@@ -193,7 +245,7 @@ jobs:
         if: (github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event.inputs.create_release == 'true'
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "frontend/build/app/outputs/flutter-apk/app-release.apk,frontend/build/app/outputs/bundle/release/app-release.aab"
+          artifacts: "${{ github.workspace }}/frontend/build/app/outputs/flutter-apk/app-release.apk,${{ github.workspace }}/frontend/build/app/outputs/bundle/release/app-release.aab"
           tag: v${{ env.VERSION }}
           name: "Kempenhaege Schedule v${{ env.VERSION }}"
           body: |
