--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,8 +39,8 @@ jobs:
         run: |
           echo "Repository root:"
           ls -la
-          echo "Frontend directory:"
-          ls -la frontend
+          echo "Android directory:"
+          ls -la android
 
       #3 Setup Java
       - name: Set Up Java
@@ -78,19 +78,17 @@ jobs:
             ~/.gradle/caches
             ~/.gradle/wrapper
             ~/.android/build-cache
-            frontend/android/.gradle
-          key: ${{ runner.os }}-gradle-${{ hashFiles('frontend/**/*.gradle*', 'frontend/**/gradle-wrapper.properties') }}
+            android/.gradle
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
 
       #7 Install Flutter Dependencies
       - name: Install Flutter Dependencies
-        working-directory: frontend
         run: flutter pub get
 
       #8 Create Local Properties
       - name: Create Local Properties
-        working-directory: frontend
         run: |
           echo "flutter.sdk=/opt/hostedtoolcache/flutter/stable-3.13.9-x64" > android/local.properties
 
@@ -107,8 +105,8 @@ jobs:
       #10 Setup keystore from secrets
       - name: Setup keystore
         if: steps.check_keystore.outputs.has_keystore == 'true'
-        working-directory: frontend
         run: |
+          mkdir -p android/app
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/keystore.jks
           echo "storeFile=../app/keystore.jks" > android/key.properties
           echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
@@ -121,7 +119,6 @@ jobs:
       #11 Use a Debug Key for PR Builds
       - name: Generate debug keystore for PR builds
         if: steps.check_keystore.outputs.has_keystore != 'true' || github.event_name == 'pull_request'
-        working-directory: frontend
         run: |
           mkdir -p android/app
           keytool -genkeypair -v -keystore android/app/debug.keystore -storepass android -alias androiddebugkey -keypass android -keyalg RSA -keysize 2048 -validity 10000 -dname "CN=Android Debug,O=Android,C=US"
@@ -132,12 +129,10 @@ jobs:
 
       #12 Build Release APK
       - name: Build Release APK
-        working-directory: frontend
         run: flutter build apk --release
 
       #13 Build App Bundle
       - name: Build App Bundle
-        working-directory: frontend
         run: flutter build appbundle --release
 
       #14 Upload Release Artifacts
@@ -146,13 +141,12 @@ jobs:
         with:
           name: Release-APK
           path: |
-            frontend/build/app/outputs/flutter-apk/app-release.apk
-            frontend/build/app/outputs/bundle/release/app-release.aab
+            build/app/outputs/flutter-apk/app-release.apk
+            build/app/outputs/bundle/release/app-release.aab
 
       #15 Extract Version
       - name: Extract version from pubspec.yaml
         id: extract_version
-        working-directory: frontend
         run: |
           version=$(grep '^version: ' pubspec.yaml | cut -d ' ' -f 2 | tr -d '\r')
           # Strip build number part if present (after the +)
@@ -201,7 +195,7 @@ jobs:
         if: (github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event.inputs.create_release == 'true'
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "frontend/build/app/outputs/flutter-apk/app-release.apk,frontend/build/app/outputs/bundle/release/app-release.aab"
+          artifacts: "build/app/outputs/flutter-apk/app-release.apk,build/app/outputs/bundle/release/app-release.aab"
           tag: v${{ env.VERSION }}
           name: "Kempenhaege Schedule v${{ env.VERSION }}"
           body: |
