--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -137,13 +137,24 @@ jobs:
           echo "VERSION_NAME=$VERSION_NAME" >> $GITHUB_ENV
           echo "Extracted version: $VERSION_NAME (full: $VERSION)"
 
+      - name: Compute tag name
+        run: |
+          # Check if tag already exists on origin
+          if git ls-remote --exit-code --tags origin "refs/tags/v${VERSION_NAME}"; then
+            NEW_TAG="v${VERSION_NAME}-${GITHUB_RUN_NUMBER}"
+          else
+            NEW_TAG="v${VERSION_NAME}"
+          fi
+          echo "Computed tag: $NEW_TAG"
+          echo "TAG_TO_USE=$NEW_TAG" >> $GITHUB_ENV
+
       - name: Create GitHub Release
         if: (github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event.inputs.create_release == 'true'
         uses: ncipollo/release-action@v1.13.0
         with:
           artifacts: "${{ env.WORKDIR }}/build/app/outputs/flutter-apk/app-release.apk,${{ env.WORKDIR }}/build/app/outputs/bundle/release/app-release.aab"
-          tag: v${{ env.VERSION_NAME }}
-          name: "Kempenhaege Schedule v${{ env.VERSION_NAME }}"
+          tag: ${{ env.TAG_TO_USE }}
+          name: "Kempenhaege Schedule ${{ env.TAG_TO_USE }}"
           body: |
             Release of Kempenhaege Schedule version ${{ env.VERSION_NAME }}
 
@@ -159,3 +170,4 @@ jobs:
           draft: false
           prerelease: ${{ github.ref != 'refs/heads/main' }}
           token: ${{ secrets.GITHUB_TOKEN }}
+          skip_existing: true
